--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     </style>
 </head>
 <body>
-    <h1>Kaotik Anahtarlar</h1>
+    <h1>Chaotic Keys</h1>
     <img src="banner.jpg" alt="Şifreleme Temalı Banner" class="banner">
     
-    <h2>Şifreleme ile İlgili Resimler</h2>
+    <h2>Cryptographic key combinations</h2>
     <div class="container" id="imageContainer">
         <!-- Resimler buraya yüklenecek -->
     </div>
     
-    <h2>Excel Dosyaları</h2>
+    <h2>Excel Files</h2>
     <div class="file-container" id="fileContainer">
         <!-- Excel dosya linkleri buraya yüklenecek -->
     </div>
