--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <script>
         // Resim dosyalarını listele
-        const images = ["sonuc1.jpg"]; // Resim dosya adlarını ekleyin
+        const images = ["result11.jpg"]; // Resim dosya adlarını ekleyin
         const imageContainer = document.getElementById("imageContainer");
         
         images.forEach(image => {
